Correcciones, estandariacion colores y uso de componentes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #cf162d;
+  --color-primary: #CF152D;
   --color-secondary: #afb1b3;
   --color-black: #000000;
   --color-white: #ffffff;
