--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,8 @@
   --color-black: #000000;
   --color-white: #ffffff;
 }
+.gloria-hallelujah-regular {
+  font-family: "Gloria Hallelujah", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
